# woo-todo

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package.json  turbo.json
.github/workflows/: ci.yml  release.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
apps/desktop/: tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/mobile/: package.json
backend/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/migrations/: 0001_initial.sql  0002_sync_guards.sql  0003_vault_capacity.sql
backend/src/: capacity.ts  crypto.ts  db.ts  http.ts  index.ts  protocol.ts  quota.ts  sync-guards.ts  vault-creation-auth.ts
backend/test/: protocol.test.ts  worker.test.ts
desktop/: package.json  vite.config.ts
desktop/electron/: preload.ts
desktop/src/: App.vue
docs/: ARCHITECTURE.md  BACKUP_AND_RESTORE.md  DEVELOPMENT.md  EXECUTION_PLAN.md  INSTALLATION.md  JIANGUOYUN_SYNC.md  PAIRING.md  PRODUCT_SPEC.md  RELEASING.md  SYNC_AND_SECURITY.md  TESTING.md
docs/adr/: 0001-native-clients.md  0002-local-first-sync.md
legacy/: README.md  package.json  tsconfig.base.json
macos/: .gitignore  Package.swift  README.md  index.html  package.json
mobile/: pubspec.yaml
scripts/: validate-contracts.mjs
server/: package.json  tsconfig.json
shared/: README.md
web/: README.md  app.js  index.html  robots.txt  sitemap.xml  styles.css  vercel.json
(+269 files in other folders)
